# meal-journal

./: LICENSE  Meal-Journal-Architecture.drawio  My Belly's Diary.code-workspace  spec.yaml
.github/workflows/: ci.yml  terraform.yml  web_build.yml
backend/: .gitignore  Dockerfile  README.md  apigw.tf  build-and-deploy.sh  build-and-upload.sh  lambda.tf  main.tf  pyproject.toml  pytest.ini  run-tests.sh  run.sh
backend/.cursor/rules/: backend-debug.mdc
backend/app/: .env.dev  main.py
backend/app/dto/: food_create.py  meal_create.py  meal_update.py  preferences_update.py  symptoms_create.py
backend/app/foods/: food.py  suggested.py
backend/app/meals/: meal.py
backend/app/preferences/: preferences.py
backend/app/shared/: auth.py  exceptions.py
backend/app/symptoms/: symptoms.py
backend/infrastructure/: apigw.tf  cognito.tf  db.tf  lambda.tf  main.tf
backend/migrations/: README.md  composeDynamoMeals.sql  create_backup.py  replace_meals.py  standardizeMealFoods.sql  unescape.py
backend/tests/: conftest.py  test_api.py  test_suggested.py
docs/: spec.yaml
mbd-web/: .env.development  .env.prod  .env.stage  .prettierignore  README.md  package.json  pnpm-lock.yaml
mbd-web/public/: manifest.json
mbd-web/src/app/: AddComponent.tsx  Header.tsx  LocalStorageStateStore.ts  layout.tsx  page.tsx
mbd-web/src/lib/: hooks.ts  store.ts
meal-journal-web/: README.md  package-lock.json  package.json
prototype-ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
prototype-ui/src/: App.jsx  main.jsx
(+38 files in other folders)
