[project]
name = "Meal_Journal_API"
version = "0.1.0"
description = "API for meal journal application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.19",
    "fastapi>=0.115.8",
    "mangum>=0.19.0",
    "pynamodb>=5.5.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.8",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.5",
]
